<resources>
    <string name="app_name">ArduinoBluetooth</string>
    <string name="not_connected">Not connected</string>
    <string name="button_scan">Scan for devices</string>
    <string name="title_other_devices">Other devices</string>
    <string name="title_paired_devices">Paired devices</string>
    <string name="send">Send</string>
    <string name="connect">Connect</string>
    <string name="discoverable">Discoverable</string>
    <string name="bt_not_enabled_leaving">Bluetooth not enabling - leaving</string>
    <string name="none_paired">No paired devices</string>
    <string name="scanning">Scanning</string>
    <string name="select_device">Select Device</string>
    <string name="none_found">No device found</string>
    <string name="btOnOff">On / Off</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="not_binded">You\'re not binded to the service</string>
    <string name="commands_textview">Calculator</string>
    <string name="Option1">1</string>
    <string name="Option2">2</string>
    <string name="Option3">3</string>
    <string name="Option4">4</string>
    <string name="Option5">5</string>
    <string name="Option6">6</string>
    <string name="Option7">7</string>
    <string name="Option8">8</string>
    <string name="Option9">9</string>
    <string name="Option10">+</string>
    <string name="Option11">-</string>
    <string name="Option12">*</string>
    <string name="Option13">/</string>
    <string name="Option14">=</string>
    <string name="Option15">.</string>
    <string name="Option16">0</string>
    <string name="Option17">AC</string>
    <string name="Option18">^</string>
    <string name="Option19">⬅</string>
    <string name="BT_search">Search for device</string>
    <string name="BT_disconnect">Disconnect from device</string>
    <string name="BT_on_off">Turn BT ON/OFF</string>
    <string name="answer">Answer</string>
    <string name="type_text">Type some text to send</string>
    <string name="exit">Exit</string>
    <string name="options">Options</string>
    <string name="Calculator">Calculator</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="aplikacja_sterujca_arduino">Aplikacja sterująca Arduino</string>
    <string name="podpis">Szymon Bury 44325</string>
    <string name="bt_enabled">Bluetooth enabled</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="open_control_fragment">Control tab enabled</string>
</resources>