<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/commands_textview"
        android:textSize="40sp"
        android:gravity="center"
        android:paddingBottom="30dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/option0_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Option0"
            app:layout_constraintEnd_toStartOf="@+id/option5_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/option1_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Option1"
            app:layout_constraintEnd_toStartOf="@+id/option6_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/option0_btn" />

        <Button
            android:id="@+id/option2_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Option2"
            app:layout_constraintEnd_toStartOf="@+id/option7_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/option1_btn" />

        <Button
            android:id="@+id/option3_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Option3"
            app:layout_constraintEnd_toStartOf="@+id/option8_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/option2_btn" />

        <Button
            android:id="@+id/option4_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Option4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/option8_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/option3_btn"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/option5_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Option5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/option6_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Option6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/option5_btn" />

        <Button
            android:id="@+id/option7_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Option7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/option6_btn" />

        <Button
            android:id="@+id/option8_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Option8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/option7_btn" />

        <Button
            android:id="@+id/option9_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="436dp"
            android:text="@string/Option9"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/option8_btn"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/option10_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Option10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/option5_btn"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/option11_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Option11"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toEndOf="@+id/option6_btn"
            app:layout_constraintTop_toBottomOf="@+id/option10_btn" />

        <Button
            android:id="@+id/option12_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Option12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toEndOf="@+id/option8_btn"
            app:layout_constraintTop_toBottomOf="@+id/option11_btn" />

        <Button
            android:id="@+id/option13_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:text="@string/Option13"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.971"
            app:layout_constraintStart_toEndOf="@+id/option8_btn"
            app:layout_constraintTop_toBottomOf="@+id/option12_btn" />

        <Button
            android:id="@+id/option14_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Option14"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toEndOf="@+id/option9_btn"
            app:layout_constraintTop_toBottomOf="@+id/option13_btn"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/answer_txtview_ctrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/option9_btn"
            app:layout_constraintVertical_bias="0.25" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
