<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/commands_textview"
        android:textSize="40sp"
        android:gravity="center"
        android:paddingBottom="30dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/input_txtview_ctrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />


        <TextView
            android:id="@+id/error_txtview_ctrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_txtview_ctrl"
            app:layout_constraintVertical_bias="0.014" />

        <TextView
            android:id="@+id/answer_txtview_ctrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer"
            android:textSize="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/option1_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:scaleX=".8"
            android:text="@string/Option1"
            app:layout_constraintBottom_toTopOf="@+id/option4_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/option2_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX=".8"
            android:text="@string/Option2"
            app:layout_constraintBottom_toTopOf="@+id/option5_btn"
            app:layout_constraintStart_toEndOf="@+id/option1_btn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/option3_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX=".8"
            android:text="@string/Option3"
            app:layout_constraintBottom_toTopOf="@+id/option6_btn"
            app:layout_constraintStart_toEndOf="@+id/option2_btn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/option4_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:scaleX=".8"
            android:text="@string/Option4"
            app:layout_constraintBottom_toTopOf="@+id/option7_btn"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/option5_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX=".8"
            android:text="@string/Option5"
            app:layout_constraintBottom_toTopOf="@+id/option8_btn"
            app:layout_constraintStart_toEndOf="@+id/option4_btn" />

        <Button
            android:id="@+id/option6_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX=".8"
            android:text="@string/Option6"
            app:layout_constraintBottom_toTopOf="@+id/option9_btn"
            app:layout_constraintStart_toEndOf="@+id/option5_btn" />

        <Button
            android:id="@+id/option7_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:scaleX=".8"
            android:text="@string/Option7"
            app:layout_constraintBottom_toTopOf="@+id/option15_btn"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/option8_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX=".8"
            android:text="@string/Option8"
            app:layout_constraintBottom_toTopOf="@+id/option16_btn"
            app:layout_constraintStart_toEndOf="@+id/option7_btn" />

        <Button
            android:id="@+id/option9_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX=".8"
            android:text="@string/Option9"
            app:layout_constraintBottom_toTopOf="@+id/option17_btn"
            app:layout_constraintStart_toEndOf="@+id/option8_btn" />

        <Button
            android:id="@+id/option10_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:text="@string/Option10"
            app:layout_constraintBottom_toTopOf="@+id/option11_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toEndOf="@+id/option3_btn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/option11_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:text="@string/Option11"
            app:layout_constraintBottom_toTopOf="@+id/option12_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/option6_btn" />

        <Button
            android:id="@+id/option12_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:text="@string/Option12"
            app:layout_constraintBottom_toTopOf="@+id/option13_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/option9_btn" />

        <Button
            android:id="@+id/option13_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:text="@string/Option13"
            app:layout_constraintBottom_toTopOf="@+id/option19_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toEndOf="@+id/option17_btn" />

        <Button
            android:id="@+id/option14_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="48dp"
            android:layout_marginBottom="64dp"
            android:scaleX="2"
            android:text="@string/Option14"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/option15_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="112dp"
            android:scaleX=".8"
            android:text="@string/Option15"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/option16_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="112dp"
            android:scaleX=".8"
            android:text="@string/Option16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/option15_btn" />

        <Button
            android:id="@+id/option17_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX=".8"
            android:text="@string/Option17"
            app:layout_constraintBottom_toTopOf="@+id/option18_btn"
            app:layout_constraintStart_toEndOf="@+id/option16_btn" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#000000"
            app:layout_constraintBottom_toTopOf="@+id/error_txtview_ctrl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_txtview_ctrl"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/option19_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="64dp"
            android:text="@string/Option19"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toEndOf="@+id/option18_btn" />

        <Button
            android:id="@+id/option18_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginLeft="44dp"
            android:layout_marginBottom="64dp"
            android:scaleX=".8"
            android:text="@string/Option18"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/option14_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
