<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:id="@+id/edit_text_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:hint="@string/type_text"
            android:inputType="text"
            android:autofillHints="" />

        <Button
            android:id="@+id/button_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send" />

        <TextView
            android:id="@+id/answer_txtview_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer"
            android:textSize="25dp"/>

    </LinearLayout>
</LinearLayout>